Refactor target spawning logic to immediately invoke spawnTarget function upon error, removing the delay for improved responsiveness.

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
           showToast(
             `${label}  •  Error ${error.toFixed(1)} px  •  Score ${score}`
           );
-          setTimeout(spawnTarget, 1200);
+          spawnTarget();
         }
 
         // --- Bindings ---
